--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "my_website",
   "private": true,
   "version": "0.0.0",
-  "homepage": "https://github.com/Fares-Zone-2/Devfolio",
+  "homepage": "https://github.com/Fares-Zone-2/Devfolio.git",
   "type": "module",
   "scripts": {
     "dev": "vite",
